@@ -4,6 +4,7 @@ Changes for Labyrinth-Plugin-Album
         - fixed license fields in META.json to be lists.
         - extended META test suite.
         - added Labyrinth::Test::Harness to pre-requisites.
+        - suppress warnings (Pages).
 
 1.06	2014-04-16
         - fixed distribution name in META.
